1. Explain what front-end modularity is

--- a/article/HTML/前端图片隐写.md
+++ b/article/HTML/前端图片隐写.md
@@ -1,4 +1,117 @@
 # 前端图片隐写
+隐写术算是一种加密技术，权威的 wiki 说法是“ 隐写术是一门关于信息隐藏的技巧与科学，所谓信息隐藏指的是不让除预期的接收者之外的任何人知晓信息的传递事件或者信息的内容。”   
+下面是一张看似普通的图片，但其中却藏有另一个肉眼无法识别的图像哦。
+下面是一张看似普通的图片，但其中却藏有另一个肉眼无法识别的图像  
+![image](./../../asset/../assets/images/html/image-steganography.png)  
+如果把上图每个色彩空间和数字 3 进行逻辑与运算，再把亮度增强 85 倍，可以得到下图  
+![image](./../../asset/../assets/images/html/image-steganography-1.png)   
+
+上述的处理过程可以理解为对图片像素的处理，也就是说，加密的信息散布在每个像素点上。可是，13 世纪还没有“ 像素” 这个概念吧？！没错，上面这个例子只是隐写术的一个现代技术实现，隐藏信息的手段有很多，我们日常的钞票防伪也算是隐写术的一种  
+聚焦到载体为图片的隐写术，一起来从前端角度分析其技术原理。  
+图片的像素信息里存储着 RGB 的色值，R、G、B 分别为该像素的红、绿、蓝通道，每个通道的分量值范围在 0~255，16 进制则是 00~FF。在 CSS 中经常使用其 16 进制形式，比如指定博客头部背景色为 #A9D5F4。其中 R（红色）的 16 进制值为 A9，换算成十进制为 169。这时候，对 R 分量的值+1，即为 170，整个像素 RGB 值为 #AAD5F4，别说你看不出差别，就连火眼金金的“ 像素眼” 设计师都察觉不出来呢。于此同时，修改 G、B 的分量值，也是我们无法察觉的。因此可以得出重要结论：RGB 分量值的小量变动，是肉眼无法分辨的，不影响对图片的识别。  
+有了这个结论，那就给我们了利用空间，常用手段的就是对二进制最低位进行操作  
+首先在页面加入一个 canvas 标签，并获取到其上下文。  
+```
+<canvas id="canvas" width="256" height="256"></canvas>
+var ctx = document.getElementById('canvas').getContext('2d');
+```
+将图片先绘制在画布上，然后获取其像素数据。
+```
+var img = new Image();
+var originalData;
+img.onload = function() {
+    ctx.drawImage(img, 0, 0);
+    // 获取指定区域的canvas像素信息
+    originalData = ctx.getImageData(0, 0, ctx.canvas.width, ctx.canvas.height);
+    console.log(originalData);
+};
+img.src = 'xiaolan.png';
+```
+打印出数据，会看到有一个非常大的数组
+这个一维数组存储了所有的像素信息，一共有 256 * 256 * 4 = 262144 个值。其中 4 个值一组，为什么呢？在浏览器中解析图片，除了 RGB 值外，每组第 4 个值为透明度值，即像素信息实际为大家熟知的 rgba 值。   
+解密规则是对 R 通道进行处理，R 的分量最低位为 1 则该像素设为红色，R 的分量最低位为 0 则该像素设为黑色，直接看代码实现，完成后我们再绘制到 canvas，即可看到结果。  
+```
+var processData = function(originalData){
+    var data = originalData.data;
+    for(var i = 0; i < data.length; i++){
+        if(i % 4 == 0){
+            // 红色分量
+            if(data[i] % 2 == 0){
+                data[i] = 0;
+            } else {
+                data[i] = 255;
+            }
+        } else if(i % 4 == 3){
+            // alpha通道不做处理
+            continue;
+        } else {
+            // 关闭其他分量，不关闭也不影响答案，甚至更美观 o(^▽^)o
+            data[i] = 0;
+        }
+    }
+    // 将结果绘制到画布
+    ctx.putImageData(originalData, 0, 0);
+}
+```
+img onload 事件中调用 processData 方法，就可以看到结果啦。
+**在图片中隐藏信息**  
+既然要在图片中加入文字信息，那么首先要获取文字的像素信息，这里我先用 canvas 在画布上打印文字，获取像素信息  
+```
+var textData;
+// 这些canvas API，好久没用，需要查API文档了T_T
+ctx.font = '30px Microsoft Yahei';
+ctx.fillText('广告位招租u', 60, 130);
+textData = ctx.getImageData(0, 0, ctx.canvas.width, ctx.canvas.height).data;
+```
+先保存文字的像素信息，接着加载图片获取其像素信息，然后对两组像素进行处理  
+```
+var mergeData = function(newData, color){
+    var oData = originalData.data;
+    var bit, offset;  // offset的作用是找到alpha通道值，这里需要大家自己动动脑筋
+ 
+    switch(color){
+        case 'R':
+            bit = 0;
+            offset = 3;
+            break;
+        case 'G':
+            bit = 1;
+            offset = 2;
+            break;
+        case 'B':
+            bit = 2;
+            offset = 1;
+            break;
+    }
+ 
+    for(var i = 0; i < oData.length; i++){
+        if(i % 4 == bit){
+            // 只处理目标通道
+            if(newData[i + offset] === 0 && (oData[i] % 2 === 1)){
+                // 没有信息的像素，该通道最低位置0，但不要越界
+                if(oData[i] === 255){
+                    oData[i]--;
+                } else {
+                    oData[i]++;
+                }
+            } else if (newData[i + offset] !== 0 && (oData[i] % 2 === 0)){
+                // // 有信息的像素，该通道最低位置1，可以想想上面的斑点效果是怎么实现的
+                if(oData[i] === 255){
+                    oData[i]--;
+                } else {
+                    oData[i]++;
+                }
+            }
+        }
+    }
+    ctx.putImageData(originalData, 0, 0);
+}
+```
+上述代码做的是，接受要隐藏的数据以及隐藏的颜色通道，然后对原图进行操作，修改图片该通道分量的最低位，如果有文字信息，则最低位置为 1，否则为 0。  
+img.onload 中调用 mergeData(textData, 'R')，处理好图像后，只要在浏览器中的 canvas 上右键保存图片即可。  
+这里的例子比较简单，只展示了基本的最低位隐藏文本信息，像二维码这些简单图形也可以这么处理。现实中隐藏画中画则需要更专业的图像处理算法。
+**应用价值**  
+这样起到了简单的一种签名作用。当然也有办法消除掉里面的信息，而前提是需要知道我的加密方式
 
 参考:  
 [不能说的秘密——前端也能玩的图片隐写术](https://mp.weixin.qq.com/s/PuYncHAc9XLsN_CGINSuKQ)
