--- a/article/js/前端并发10个相同的请求，怎么控制为只发一个请求.md
+++ b/article/js/前端并发10个相同的请求，怎么控制为只发一个请求.md
@@ -1,4 +1,114 @@
 # 前端并发10个相同的请求，怎么控制为只发一个请求
+**描述**  
+- 同时发多个相同的请求，如果第一个请求成功，那么剩余的请求都不会发出，成功的结果作为剩余请求返回
+- 如果第一个请求失败了，那么接着发编号为2的请求，如果请求成功，那么剩余的请求都不会发出，成功的结果作为剩余请求返回
+- 如果第二个请求失败了，那么接着发编号为3的请求，如果请求成功，那么剩余的请求都不会发出，成功的结果作为剩余请求返回
+- ...以此递推，直到遇到最坏的情况需要发送最后一个请求
+
+```
+async function fetchData (a)  {
+    const data = await fetch('//127.0.0.1:3000/test')
+    const d = await data.json();
+    console.log(d);
+    return d;
+}
+
+fetchData(2) // 编号 1
+fetchData(2) // 2
+fetchData(2) // 3
+fetchData(2) // 4
+fetchData(2) // 4
+fetchData(2) // 5
+fetchData(2)
+fetchData(2)
+```
+**老版本cachedAsync**  
+使用过vue的缓存函数缓存成功的请求, 实现是这样的。下面的cachedAsync只会缓存成功的请求，如果失败了，直接拉起新的请求。但是如果是上面的并发场景，相同的请求因为无法命中缓存，会出现连续发送三个请求的问题，无法处理这种并发的场景。  
+```
+const cachedAsync = function(fn) {
+    const cache = Object.create(null);
+    return async str => {
+        const hit = cache[str];
+        if (hit) {
+            return hit;
+        }
+        // 只缓存成功的Promise, 失败直接重新请求
+        return (cache[str] = await fn(str));
+    };
+};
+const fetch2 = cachedAsync(fetchData)
+fetch2(2);
+fetch2(2);
+fetch2(2);
+```
+**进阶版本**  
+缓存是必须的，那么只要处理怎么控制并发即可。可以有这么一个思路:
+- 每个请求都返回一个新的Promise, Promise的exector的执行时机，通过一个队列保存。
+- 当队列长度为1的时候，执行一次请求，如果请求成功，那么遍历队列中的exector，拿到请求的结果然后resolve。
+- 如果请求失败了，那么就把这个Promise reject掉，同时出栈。然后递归调用next
+- 直到exector队列清空为止
+
+```
+  const cacheAsync = (promiseGenerator, symbol) => {
+    const cache = new Map();
+    const never = Symbol();
+    return async (params) => {
+      return new Promise((resolve, reject) => {
+      // 可以提供键值
+        symbol = symbol || params;
+        let cacheCfg = cache.get(symbol);
+        if (!cacheCfg) {
+          cacheCfg = {
+            hit: never,
+            exector: [{ resolve, reject }],
+          };
+          cache.set(symbol, cacheCfg);
+        } else {
+          // 命中缓存
+          if (cacheCfg.hit !== never) {
+            return resolve(cacheCfg.hit)
+          }
+          cacheCfg.exector.push({ resolve, reject });
+        }
+
+        const { exector } = cacheCfg;
+        
+        // 处理并发，在请求还处于pending过程中就发起了相同的请求
+        // 拿第一个请求
+        if (exector.length === 1) {
+          const next = async () => {
+            try {
+              if (!exector.length) return;
+              const response = await promiseGenerator(params);
+              // 如果成功了，那么直接resolve掉剩余同样的请求
+              while (exector.length) { // 清空
+                exector.shift().resolve(response); 
+              }
+              // 缓存结果
+              cacheCfg.hit = response;
+            } catch (error) {
+              // 如果失败了 那么这个promise的则为reject
+              const { reject } = exector.shift();
+              reject(error);
+              next(); // 失败重试，降级为串行
+            }
+          };
+          next();
+        }
+      });
+    };
+  };
+```
+**测试cacheAsync**  
+需要测试的场景
+- 请求接口随机出现成功或者失败
+- 成功预期结果，剩余的请求都不会发出
+- 失败重试，接着发下一个请求
+
+为什么要缓存接口，举个场景。输入关键字搜索，监听的是input事件，在你增删关键字的时候，就会出现请求参数一样的场景，这时候就符合防抖+前端接口缓存的方式。遇到相同关键字直接拉之前的缓存。  
+提示:  
+缓存因为是闭包的方式，因此刷新页面缓存也失效了。不过这个是理应如此，因为大部分场景刷新页面，就是要重置状态，如果要持久化，还不如保存到本地存储。
+
 
 参考：
 [前端并发10个相同的请求，怎么控制为只发一个请求](https://juejin.cn/post/7052700635154219015)
