--- a/article/algorithm/前端算法系统练习之栈和队列篇.md
+++ b/article/algorithm/前端算法系统练习之栈和队列篇.md
@@ -332,9 +332,329 @@ var ladderLength = function(beginWord, endWord, wordList) {
 对于siftUp操作，我们试想一下现在有一个正常的堆，满足任何父元素优先级大于子元素，这时候向这个堆的数组末尾又添加了一个元素，那现在可能就不符合堆的结构特点了。那么现在我将新增的节点和其父节点进行比较，如果父节点优先级小于它，则两者交换，不断向上比较直到根节点为止，这样就保证了堆的正确结构。而这样的操作就是siftUp。  
 siftDown是与其相反方向的操作，从上到下比较，原理相同，也是为了保证堆的正确结构。  
 **实现一个最大堆**  
+最大堆，即堆顶元素为优先级最高的元素。  
+``` 
+// 以最大堆为例来实现一波
+/**
+* @param {number[]} nums
+* @param {number} k
+* @return {number[]}
+*/
+class MaxHeap {
+  constructor(arr = [], compare = null) {
+    this.data = arr;
+    this.size = arr.length;
+    this.compare = compare;
+  }
+  getSize() {
+    return this.size;
+  }
+  isEmpty() {
+    return this.size === 0;
+  }
+  // 增加元素
+  add(value) {
+    this.data.push(value);
+    this.size++;
+    // 增加的时候把添加的元素进行 siftUp
+    this._siftUp(this.getSize() - 1);
+  }
+  // 找到优先级最高的元素
+  findMax() {
+    if (this.getSize() === 0)
+      return;
+    return this.data[0];
+  }
+  // 让优先级最高的元素(即队首元素)出队
+  extractMax() {
+    // 1.保存队首元素
+    let ret = this.findMax();
+    // 2.让队首和队尾元素交换位置
+    this._swap(0, this.getSize() - 1);
+    // 3. 把队尾踢出去，size--
+    this.data.pop();
+    this.size--;
+    // 4. 新的队首 siftDown
+    this._siftDown(0);
+    return ret;
+  }
 
+  toString() {
+    console.log(this.data);
+  }
+  _swap(i, j) {
+    [this.data[i], this.data[j]] = [this.data[j], this.data[i]];
+  }
+  _parent(index) {
+    return Math.floor((index - 1) / 2);
+  }
+  _leftChild(index) {
+    return 2 * index + 1;
+  }
+  _rightChild(index) {
+    return 2 * index + 2;
+  }
+  _siftUp(k) {
+    // 上浮操作，只要子元素优先级比父节点大，父子交换位置，一直向上直到根节点
+    while (k > 0 && this.compare(this.data[k], this.data[this._parent(k)])) {
+      this._swap(k, this._parent(k));
+      k = this._parent(k);
+    }
+  }
+  _siftDown(k) {
+    // 存在左孩子的时候
+    while (this._leftChild(k) < this.size) {
+      let j = this._leftChild(k);
+      // 存在右孩子而且右孩子比左孩子大
+      if (this._rightChild(k) < this.size &&
+        this.compare(this.data[this._rightChild(k)], this.data[j])) {
+        j++;
+      }
+      if (this.compare(this.data[k], this.data[j]))
+        return;
+      // 父节点比子节点小，交换位置
+      this._swap(k, j);
+      // 继续下沉
+      k = j;
+    }
+  }
+}
+```
+**实现优先队列**  
+``` 
+class PriorityQueue {
+  // max 为优先队列的容量
+  constructor(max, compare) {
+    this.max = max;
+    this.compare = compare;
+    this.maxHeap = new MaxHeap([], compare);
+  }
 
+  getSize() {
+    return this.maxHeap.getSize();
+  }
 
+  isEmpty() {
+    return this.maxHeap.isEmpty();
+  }
+
+  getFront() {
+    return this.maxHeap.findMax();
+  }
+
+  enqueue(e) {
+    // 比当前最高的优先级的还要高，直接不处理
+    if (this.getSize() === this.max) {
+      if (this.compare(e, this.getFront())) return;
+      this.dequeue();
+    }
+    return this.maxHeap.add(e);
+  }
+
+  dequeue() {
+    if (this.getSize() === 0) return null;
+    return this.maxHeap.extractMax();
+  }
+}
+```
+## 优先队列应用
+**前 K 个高频元素**  
+给定一个非空的整数数组，返回其中出现频率前 k 高的元素。  
+``` 
+输入: nums = [1,1,1,2,2,3], k = 2
+输出: [1,2]
+```
+说明:  
+- 你可以假设给定的 k 总是合理的，且 1 ≤ k ≤ 数组中不相同的元素的个数。
+- 你的算法的时间复杂度必须优于 O(n log n) , n 是数组的大小。
+
+思路:
+，那之后如何来选取频率前 K 个元素同时又保证时间复杂度小于 O(n log n)呢？  
+当然，这是一道典型的考察优先队列的题，利用容量为 K 的优先队列每次踢出不符合条件的值，那么最后剩下的即为所求。整个时间复杂度成为 O（n log K），明显是小于 O(n log n) 的。  
+既然是优先队列，就涉及到如何来定义优先级的问题。  
+倘若我们以高频率为高优先级，那么队首始终是高频率的元素，因此每次出队是踢出出现频率最高的元素，假设优先队列容量为 K，那照这么做，剩下的是频率最低的 K 个元素，显然不符合题意。  
+我们需要的是每次出队时踢出频率最低的元素，这样最后剩下来的就是频率最高 K 个元素。  
+是不是我们为了踢出频率最低的元素，还要重新写一个小顶堆的实现呢？  
+代码实现:
+``` 
+var topKFrequent = function(nums, k) {
+   let map = {};
+   let pq = new PriorityQueue(k, (a, b) => map[a] - map[b] < 0);
+   for(let i = 0; i < nums.length; i++) {
+       if(!map[nums[i]]) map[nums[i]] = 1;
+       else map[nums[i]] = map[[nums[i]]] + 1;
+   }
+   let arr = Array.from(new Set(nums));
+   for(let i = 0; i < arr.length; i++) {
+       pq.enqueue(arr[i]);
+   }
+   return pq.maxHeap.data;
+};
+```
+**合并 K 个排序链表**  
+合并 k 个排序链表，返回合并后的排序链表。请分析和描述算法的复杂度。  
+示例:  
+``` 
+输入:
+[
+  1->4->5,
+  1->3->4,
+  2->6
+]
+输出: 1->1->2->3->4->4->5->6
+```
+``` 
+**
+ * @param {ListNode[]} lists
+ * @return {ListNode}
+ */
+var mergeKLists = function(lists) {
+    let dummyHead = p = new ListNode();
+    // 定义优先级的函数，重要！
+    let pq = new PriorityQueue(lists.length, (a, b) => a.val <= b.val);
+    // 将头结点推入优先队列
+    for(let i = 0; i < lists.length; i++) 
+        if(lists[i]) pq.enqueue(lists[i]);
+    // 取出值最小的节点，如果 next 不为空，继续推入队列
+    while(pq.getSize()) {
+        let min = pq.dequeue();
+        p.next = min;
+        p = p.next;
+        if(min.next) pq.enqueue(min.next);
+    }
+    return dummyHead.next;
+};
+```
+## 双端队列及应用
+双端队列是一种特殊的队列，首尾都可以添加或者删除元素，是一种加强版的队列。  
+JS 中的数组就是一种典型的双端队列。push、pop 方法分别从尾部添加和删除元素，unshift、shift 方法分别从首部添加和删除元素。  
+**滑动窗口最大值**  
+给定一个数组 nums，有一个大小为 k 的滑动窗口从数组的最左侧移动到数组的最右侧。你只可以看到在滑动窗口内的 k 个数字。滑动窗口每次只向右移动一位。返回滑动窗口中的最大值。    
+示例:  
+``` 
+输入: nums = [1,3,-1,-3,5,3,6,7], 和 k = 3
+输出: [3,3,5,5,6,7] 
+解释: 
+
+  滑动窗口的位置                最大值
+---------------               -----
+[1  3  -1] -3  5  3  6  7       3
+ 1 [3  -1  -3] 5  3  6  7       3
+ 1  3 [-1  -3  5] 3  6  7       5
+ 1  3  -1 [-3  5  3] 6  7       5
+ 1  3  -1  -3 [5  3  6] 7       6
+ 1  3  -1  -3  5 [3  6  7]      7
+```
+思路  
+建立一个双端队列 window，每次 push 进来一个新的值，就将 window 中目前前面所有比它小的值都删除。利用双端队列的特性，可以从后往前遍历，遇到小的就删除之，否则停止。  
+这样可以保证队首始终是最大值，因此寻找最大值的时间复杂度可以降到 O(1)。由于 window 中会有越来越多的值被淘汰，因此整体的时间复杂度是线性的。  
+代码实现  
+``` 
+var maxSlidingWindow = function(nums, k) {
+    // 异常处理
+    if(nums.length === 0 || !k) return [];
+    let window = [], res = [];
+    for(let i = 0; i < nums.length; i++) {
+        // 先把滑动窗口之外的踢出
+        if(window[0] !== undefined && window[0] <= i - k) window.shift();
+        // 保证队首是最大的
+        while(nums[window[window.length - 1]] <= nums[i])  window.pop();
+        window.push(i);
+        if(i >= k - 1) res.push(nums[window[0]]) 
+    }
+    return res;
+};
+```
+## 栈和队列的相互实现
+**栈实现队列**  
+使用栈实现队列的下列操作：
+
+push(x) -- 将一个元素放入队列的尾部。pop() -- 从队列首部移除元素。peek() -- 返回队列首部的元素。empty() -- 返回队列是否为空。  
+示例:
+``` 
+let queue = new MyQueue();
+
+queue.push(1);
+queue.push(2);  
+queue.peek();  // 返回 1
+queue.pop();   // 返回 1
+queue.empty(); // 返回 false
+```
+思路  
+当进行push操作时，push 到 stack1，而进行pop和peek的操作时，我们通过stack2。  
+当然这其中有一个特殊情况，就是stack2是空，如何来进行pop和peek? 很简单，把stack1中的元素依次 pop 并推入stack2中，然后正常地操作 stack2即可
+``` 
+var MyQueue = function() {
+    this.stack1 = [];
+    this.stack2 = [];
+};
+
+MyQueue.prototype.push = function(x) {
+    this.stack1.push(x);
+};
+// 将 stack1 的元素转移到 stack2
+MyQueue.prototype.transform = function() {
+  while(this.stack1.length) {
+    this.stack2.push(this.stack1.pop());
+  }
+}
+
+MyQueue.prototype.pop = function() {
+  if(!this.stack2.length) this.transform();
+  return this.stack2.pop();
+};
+
+MyQueue.prototype.peek = function() {
+    if(!this.stack2.length) this.transform();
+    return this.stack2[this.stack2.length - 1];
+};
+
+MyQueue.prototype.empty = function() {
+    return !this.stack1.length && !this.stack2.length;
+};
+```
+**队列实现栈**  
+代码实现  
+实现过程中，值得注意的一点是，queue1 始终保存前面的元素，queue2 始终保存队尾元素（即栈顶元素 ）。  
+但是当 push 的时候有一个陷阱，就是当queue2已经有元素的时候，不能将新值 push 到 queue1，因为此时的栈顶元素应该更新。此时对于新的值来说，应先 push 到 queue2， 然后将旧的栈顶从queue2出队，推入 queue1，这样就实现了更新栈顶的操作。
+``` 
+var MyStack = function() {
+    this.queue1 = [];
+    this.queue2 = [];
+};
+MyStack.prototype.push = function(x) {
+    if(!this.queue2.length) this.queue1.push(x);
+    else {
+        // queue2 已经有值
+        this.queue2.push(x);
+        // 旧的栈顶移到 queue1 中
+        this.queue1.push(this.queue2.shift());
+    }
+
+};
+MyStack.prototype.transform = function() {
+    while(this.queue1.length !== 1) {
+        this.queue2.push(this.queue1.shift())
+    }
+    // queue2 保存了前面的元素
+    // 让 queue1 和 queue2 交换
+    // 现在queue1 包含前面的元素，queue2 里面就只包含队尾的元素
+    let tmp = this.queue1;
+    this.queue1 = this.queue2;
+    this.queue2 = tmp;
+}
+MyStack.prototype.pop = function() {
+    if(!this.queue2.length) this.transform();
+    return this.queue2.shift();
+};
+MyStack.prototype.top = function() {
+    if(!this.queue2.length) this.transform();
+    return this.queue2[0];
+};
+MyStack.prototype.empty = function() {
+    return !this.queue1.length && !this.queue2.length;
+};
+```
 
 参考:
 [前端算法系统练习: 栈和队列篇](https://mp.weixin.qq.com/s/tWbeOTx0JpiZOD0YaC1P2A)
